# tap-eia

./: .env.example  CLAUDE.md  PROMPT.md  README.md  meltano.yml  pyproject.toml  validate_schema.py
.github/workflows/: test.yml
tap_eia/: __init__.py  __main__.py  client.py  helpers.py  streams.py  tap.py
tap_eia/streams/: __init__.py  data_streams.py  route_streams.py
tests/: __init__.py  test_core.py
